--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Solana Lottos! Lotteries in solana!</h1>
+<title>Solana lottos: Lotteries in Solana</title>
+
+<h1>Solana Lottos: Lotteries in solana</h1>
+
+<p>Next drawing: December 31, 2021</p>
+
+<p>To enter, send any amount to FBmedtvQnjDYQCUmBVaTbbsTEKqcvq9rvoTNa3Tw6ma4</p>
+
+<p>Your odds of winning are proportional to the amount you deposit. Just like regular lottery tickets.</p>
